2007-09-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Added telnetd test.

2007-09-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networkconfig-icecube.h: Fix MAC address and typo.

2007-09-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Add mcast.

2007-09-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networkconfig.h: Loopback only network configuration tweaked to have
	a hostname.

2007-09-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networkconfig.h: Loopback only network configuration. Use one of the
	real ones as an example.

2007-09-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networkconfig-qemu.h: Disable DHCP and use static IP.
	* networkconfig.h: Use only loopback so tests can run OK on any target
	even if they can't do anything.
	* networkconfig-icecube.h: New file.

2007-08-07	Joel Sherrill <joel.sherrill@OARcorp.com>

	* VERSION: Updated to network-demos-4.7.99.2.

2007-07-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networkconfig-qemu.h: New file.

2007-07-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networkconfig.h: Make the NFS server, remote filesystem, and
	directory to look at configurable.

2007-06-22	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile: Remove netlink. It appeared to be a hacked copy of http.
	* netlink/ChangeLog, netlink/Makefile, netlink/index.html,
	netlink/init.c, netlink/networkconfig.h, netlink/system.h: Removed.

2007-06-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile: New file.

2007-03-13	Joel Sherrill <joel@OARcorp.com>

	* VERSION: Updated to network-demos-4.7.99.1.

2005-09-02	Joel Sherrill <joel@OARcorp.com>

	* VERSION: Updated to network-demos-4.6.99.2.

2003-09-18	Joel Sherrill <joel@OARcorp.com>

	PR 493/networking
	* dnstest/init.c, http/Makefile, http/init.c, http/system.h,
	netdemo/init.c, netlink/init.c, ntp/init.c, select/init.c,
	select/test.c, tftpTest/init.c, tftpTest/test.c, ttcp/init.c,