@@ -50,13 +50,11 @@
  */
 extern void rtems_bsdnet_loopattach();
 static struct rtems_bsdnet_ifconfig loopback_config = {
-	"lo0",				/* name */
-	rtems_bsdnet_loopattach,	/* attach function */
-
-	NULL,				/* link to next interface */
-
-	"127.0.0.1",			/* IP address */
-	"255.0.0.0",			/* IP net mask */
+        "lo0",                          /* name */
+        rtems_bsdnet_loopattach,        /* attach function */
+        NULL,                           /* link to next interface */
+        "127.0.0.1",                    /* IP address */
+        "255.0.0.0",                    /* IP net mask */
 };
 #endif
 
@@ -64,34 +62,34 @@ static struct rtems_bsdnet_ifconfig loopback_config = {
  * Default network interface
  */
 static struct rtems_bsdnet_ifconfig netdriver_config = {
-	RTEMS_BSP_NETWORK_DRIVER_NAME,		/* name */
-	RTEMS_BSP_NETWORK_DRIVER_ATTACH,	/* attach function */
+        RTEMS_BSP_NETWORK_DRIVER_NAME,          /* name */
+        RTEMS_BSP_NETWORK_DRIVER_ATTACH,        /* attach function */
 
 #ifdef RTEMS_USE_LOOPBACK 
-	&loopback_config,		/* link to next interface */
+        &loopback_config,               /* link to next interface */
 #else
-	NULL,				/* No more interfaces */
+        NULL,                           /* No more interfaces */
 #endif
 
 #if (defined (RTEMS_USE_BOOTP))
-	NULL,				/* BOOTP supplies IP address */
-	NULL,				/* BOOTP supplies IP net mask */
+        NULL,                           /* BOOTP supplies IP address */
+        NULL,                           /* BOOTP supplies IP net mask */
 #else
-	"192.168.1.244",		/* IP address */
-	"255.255.255.0",		/* IP net mask */
+        "192.168.1.244",                /* IP address */
+        "255.255.255.0",                /* IP net mask */
 #endif /* !RTEMS_USE_BOOTP */
 
 #if (defined (RTEMS_SET_ETHERNET_ADDRESS))
-	ethernet_address,               /* Ethernet hardware address */
+        ethernet_address,               /* Ethernet hardware address */
 #else
-	NULL,                           /* Driver supplies hardware address */
+        NULL,                           /* Driver supplies hardware address */
 #endif
-	0,				/* Use default driver parameters */
-        0,				/* mtu */
-        0,				/* rbuf_count */
-        0,				/* xbuf_count */
-        0,				/* port */
-        0				/* irq */
+        0,                              /* Use default driver parameters */
+        0,                              /* mtu */
+        0,                              /* rbuf_count */
+        0,                              /* xbuf_count */
+        0,                              /* port */
+        0                               /* irq */
 
 };
 
@@ -99,27 +97,38 @@ static struct rtems_bsdnet_ifconfig netdriver_config = {
  * Network configuration
  */
 struct rtems_bsdnet_config rtems_bsdnet_config = {
-	&netdriver_config,
+        &netdriver_config,
 
 #if (defined (RTEMS_USE_BOOTP))
-	rtems_bsdnet_do_bootp,
+        rtems_bsdnet_do_bootp,
 #else
-	NULL,
+        NULL,
 #endif
 
-	0,				/* Default network task priority */
-	256 * 1024,			/* Default mbuf capacity */
-	256 * 1024,			/* Default mbuf cluster capacity */
+        0,                              /* Default network task priority */
+        256 * 1024,                     /* Default mbuf capacity */
+        256 * 1024,                     /* Default mbuf cluster capacity */
 
 #if (!defined (RTEMS_USE_BOOTP))
-	"rtems",		/* Host name */
-	"nodomain.com",		/* Domain name */
-	"192.168.1.14",  	/* Gateway */
-	"192.168.1.1",  	/* Log host */
-	{"192.168.1.1"  },	/* Name server(s) */
-	{"192.168.1.1"  },	/* NTP server(s) */
+        "rtems",                /* Host name */
+        "nodomain.com",         /* Domain name */
+        "192.168.1.14",         /* Gateway */
+        "192.168.1.1",          /* Log host */
+        {"192.168.1.1"  },      /* Name server(s) */
+        {"192.168.1.1"  },      /* NTP server(s) */
+#else
+        NULL,                   /* Host name */
+        NULL,                   /* Domain name */
+        NULL,                   /* Gateway */
+        NULL,                   /* Log host */
+        { NULL },               /* Name server(s) */
+        { NULL },               /* NTP server(s) */
 #endif /* !RTEMS_USE_BOOTP */
-
+        0,                      /* efficiency */
+        0,                      /* udp TX buffer */
+        0,                      /* udp RX buffer */
+        0,                      /* tcp TX buffer */
+        0,                      /* tcp RX buffer */
 };
 
 /*
