@@ -1,3 +1,8 @@
+2008-02-05	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* networkconfig-icecube.h, networkconfig-qemu.h, networkconfig.h:
+	Updated to include new fields and expand tabs.
+
 2007-09-25	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* Makefile: Added telnetd test.
